--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.2.45" !default;
+$mdi-version:          "5.3.45" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -139,11 +139,17 @@ $mdi-icons: (
   "alert-circle-outline": F05D6,
   "alert-decagram": F06BD,
   "alert-decagram-outline": F0CE5,
+  "alert-minus": F14BB,
+  "alert-minus-outline": F14BE,
   "alert-octagon": F0029,
   "alert-octagon-outline": F0CE6,
   "alert-octagram": F0767,
   "alert-octagram-outline": F0CE7,
   "alert-outline": F002A,
+  "alert-plus": F14BA,
+  "alert-plus-outline": F14BD,
+  "alert-remove": F14BC,
+  "alert-remove-outline": F14BF,
   "alert-rhombus": F11CE,
   "alert-rhombus-outline": F11CF,
   "alien": F089A,
@@ -851,6 +857,8 @@ $mdi-icons: (
   "briefcase-search-outline": F0C42,
   "briefcase-upload": F00D9,
   "briefcase-upload-outline": F0C43,
+  "briefcase-variant": F1494,
+  "briefcase-variant-outline": F1495,
   "brightness-1": F00DA,
   "brightness-2": F00DB,
   "brightness-3": F00DC,
@@ -1037,6 +1045,7 @@ $mdi-icons: (
   "car-wash": F010E,
   "car-windshield": F101B,
   "car-windshield-outline": F101C,
+  "carabiner": F14C0,
   "caravan": F07AD,
   "card": F0B6F,
   "card-account-details": F05D2,
@@ -1487,6 +1496,8 @@ $mdi-icons: (
   "comment-text-multiple-outline": F0861,
   "comment-text-outline": F0189,
   "compare": F018A,
+  "compare-horizontal": F1492,
+  "compare-vertical": F1493,
   "compass": F018B,
   "compass-off": F0B80,
   "compass-off-outline": F0B81,
@@ -1626,7 +1637,7 @@ $mdi-icons: (
   "currency-usd-circle": F116B,
   "currency-usd-circle-outline": F0178,
   "currency-usd-off": F067A,
-  "current-ac": F095B,
+  "current-ac": F1480,
   "current-dc": F095C,
   "cursor-default": F01C0,
   "cursor-default-click": F0CFD,
@@ -2017,6 +2028,7 @@ $mdi-icons: (
   "feature-search": F0A49,
   "feature-search-outline": F0A4A,
   "fedora": F08DB,
+  "fencing": F14C1,
   "ferris-wheel": F0EA4,
   "ferry": F0213,
   "file": F0214,
@@ -2278,6 +2290,8 @@ $mdi-icons: (
   "folder-multiple": F0253,
   "folder-multiple-image": F0254,
   "folder-multiple-outline": F0255,
+  "folder-multiple-plus": F147E,
+  "folder-multiple-plus-outline": F147F,
   "folder-music": F1359,
   "folder-music-outline": F135A,
   "folder-network": F0870,
@@ -3033,6 +3047,7 @@ $mdi-icons: (
   "laptop-off": F06E7,
   "laptop-windows": F0325,
   "laravel": F0AD0,
+  "laser-pointer": F1484,
   "lasso": F0F03,
   "lastpass": F0446,
   "latitude": F0F57,
@@ -3365,6 +3380,7 @@ $mdi-icons: (
   "monitor-multiple": F037A,
   "monitor-off": F0D90,
   "monitor-screenshot": F0E51,
+  "monitor-share": F1483,
   "monitor-speaker": F0F5F,
   "monitor-speaker-off": F0F60,
   "monitor-star": F0DDC,
@@ -3864,6 +3880,7 @@ $mdi-icons: (
   "plus-circle-outline": F0419,
   "plus-minus": F0992,
   "plus-minus-box": F0993,
+  "plus-minus-variant": F14C9,
   "plus-network": F041A,
   "plus-network-outline": F0CBA,
   "plus-one": F041B,
@@ -3884,6 +3901,7 @@ $mdi-icons: (
   "poll": F041F,
   "poll-box": F0420,
   "poll-box-outline": F127B,
+  "polo": F14C3,
   "polymer": F0421,
   "pool": F0606,
   "popcorn": F0422,
@@ -3960,7 +3978,19 @@ $mdi-icons: (
   "puzzle": F0431,
   "puzzle-check": F1426,
   "puzzle-check-outline": F1427,
+  "puzzle-edit": F14D3,
+  "puzzle-edit-outline": F14D9,
+  "puzzle-heart": F14D4,
+  "puzzle-heart-outline": F14DA,
+  "puzzle-minus": F14D1,
+  "puzzle-minus-outline": F14D7,
   "puzzle-outline": F0A66,
+  "puzzle-plus": F14D0,
+  "puzzle-plus-outline": F14D6,
+  "puzzle-remove": F14D2,
+  "puzzle-remove-outline": F14D8,
+  "puzzle-star": F14D5,
+  "puzzle-star-outline": F14DB,
   "qi": F0999,
   "qqchat": F0605,
   "qrcode": F0432,
@@ -3991,6 +4021,8 @@ $mdi-icons: (
   "radioactive-off": F0EC1,
   "radiobox-blank": F043D,
   "radiobox-marked": F043E,
+  "radiology-box": F14C5,
+  "radiology-box-outline": F14C6,
   "radius": F0CC0,
   "radius-outline": F0CC1,
   "railroad-light": F0F1E,
@@ -4023,6 +4055,42 @@ $mdi-icons: (
   "refresh-circle": F1377,
   "regex": F0451,
   "registered-trademark": F0A67,
+  "relation-many-to-many": F1496,
+  "relation-many-to-one": F1497,
+  "relation-many-to-one-or-many": F1498,
+  "relation-many-to-only-one": F1499,
+  "relation-many-to-zero-or-many": F149A,
+  "relation-many-to-zero-or-one": F149B,
+  "relation-one-or-many-to-many": F149C,
+  "relation-one-or-many-to-one": F149D,
+  "relation-one-or-many-to-one-or-many": F149E,
+  "relation-one-or-many-to-only-one": F149F,
+  "relation-one-or-many-to-zero-or-many": F14A0,
+  "relation-one-or-many-to-zero-or-one": F14A1,
+  "relation-one-to-many": F14A2,
+  "relation-one-to-one": F14A3,
+  "relation-one-to-one-or-many": F14A4,
+  "relation-one-to-only-one": F14A5,
+  "relation-one-to-zero-or-many": F14A6,
+  "relation-one-to-zero-or-one": F14A7,
+  "relation-only-one-to-many": F14A8,
+  "relation-only-one-to-one": F14A9,
+  "relation-only-one-to-one-or-many": F14AA,
+  "relation-only-one-to-only-one": F14AB,
+  "relation-only-one-to-zero-or-many": F14AC,
+  "relation-only-one-to-zero-or-one": F14AD,
+  "relation-zero-or-many-to-many": F14AE,
+  "relation-zero-or-many-to-one": F14AF,
+  "relation-zero-or-many-to-one-or-many": F14B0,
+  "relation-zero-or-many-to-only-one": F14B1,
+  "relation-zero-or-many-to-zero-or-many": F14B2,
+  "relation-zero-or-many-to-zero-or-one": F14B3,
+  "relation-zero-or-one-to-many": F14B4,
+  "relation-zero-or-one-to-one": F14B5,
+  "relation-zero-or-one-to-one-or-many": F14B6,
+  "relation-zero-or-one-to-only-one": F14B7,
+  "relation-zero-or-one-to-zero-or-many": F14B8,
+  "relation-zero-or-one-to-zero-or-one": F14B9,
   "relative-scale": F0452,
   "reload": F0453,
   "reload-alert": F110B,
@@ -4062,8 +4130,10 @@ $mdi-icons: (
   "rewind-outline": F070A,
   "rhombus": F070B,
   "rhombus-medium": F0A10,
+  "rhombus-medium-outline": F14DC,
   "rhombus-outline": F070C,
   "rhombus-split": F0A11,
+  "rhombus-split-outline": F14DD,
   "ribbon": F0460,
   "rice": F07EA,
   "ring": F07EB,
@@ -4078,6 +4148,8 @@ $mdi-icons: (
   "robot-vacuum": F070D,
   "robot-vacuum-variant": F0908,
   "rocket": F0463,
+  "rocket-launch": F14DE,
+  "rocket-launch-outline": F14DF,
   "rocket-outline": F13AF,
   "rodent": F1327,
   "roller-skate": F0D2B,
@@ -4238,8 +4310,10 @@ $mdi-icons: (
   "set-left": F077B,
   "set-left-center": F077C,
   "set-left-right": F077D,
+  "set-merge": F14E0,
   "set-none": F077E,
   "set-right": F077F,
+  "set-split": F14E1,
   "set-square": F145D,
   "set-top-box": F099F,
   "settings-helper": F0A6E,
@@ -4360,6 +4434,7 @@ $mdi-icons: (
   "sim-off": F04A9,
   "simple-icons": F131D,
   "sina-weibo": F0ADF,
+  "sine-wave": F095B,
   "sitemap": F04AA,
   "size-l": F13A6,
   "size-m": F13A5,
@@ -4370,6 +4445,7 @@ $mdi-icons: (
   "size-xxs": F13A2,
   "size-xxxl": F13A9,
   "skate": F0D35,
+  "skateboard": F14C2,
   "skew-less": F0D36,
   "skew-more": F0D37,
   "ski": F1304,
@@ -4391,6 +4467,8 @@ $mdi-icons: (
   "skull-crossbones": F0BC6,
   "skull-crossbones-outline": F0BC7,
   "skull-outline": F0BC8,
+  "skull-scan": F14C7,
+  "skull-scan-outline": F14C8,
   "skype": F04AF,
   "skype-business": F04B0,
   "slack": F04B1,
@@ -4452,6 +4530,12 @@ $mdi-icons: (
   "sort-variant-remove": F1147,
   "soundcloud": F04C0,
   "source-branch": F062C,
+  "source-branch-check": F14CF,
+  "source-branch-minus": F14CB,
+  "source-branch-plus": F14CA,
+  "source-branch-refresh": F14CD,
+  "source-branch-remove": F14CC,
+  "source-branch-sync": F14CE,
   "source-commit": F0718,
   "source-commit-end": F0719,
   "source-commit-end-local": F071A,
@@ -4849,6 +4933,7 @@ $mdi-icons: (
   "trackpad": F07F8,
   "trackpad-lock": F0933,
   "tractor": F0892,
+  "tractor-variant": F14C4,
   "trademark": F0A78,
   "traffic-cone": F137C,
   "traffic-light": F052B,
@@ -5032,29 +5117,42 @@ $mdi-icons: (
   "view-agenda": F056A,
   "view-agenda-outline": F11D8,
   "view-array": F056B,
+  "view-array-outline": F1485,
   "view-carousel": F056C,
+  "view-carousel-outline": F1486,
   "view-column": F056D,
+  "view-column-outline": F1487,
   "view-comfy": F0E6A,
+  "view-comfy-outline": F1488,
   "view-compact": F0E6B,
   "view-compact-outline": F0E6C,
   "view-dashboard": F056E,
   "view-dashboard-outline": F0A1D,
   "view-dashboard-variant": F0843,
+  "view-dashboard-variant-outline": F1489,
   "view-day": F056F,
+  "view-day-outline": F148A,
   "view-grid": F0570,
   "view-grid-outline": F11D9,
   "view-grid-plus": F0F8D,
   "view-grid-plus-outline": F11DA,
   "view-headline": F0571,
   "view-list": F0572,
+  "view-list-outline": F148B,
   "view-module": F0573,
+  "view-module-outline": F148C,
   "view-parallel": F0728,
+  "view-parallel-outline": F148D,
   "view-quilt": F0574,
+  "view-quilt-outline": F148E,
   "view-sequential": F0729,
+  "view-sequential-outline": F148F,
   "view-split-horizontal": F0BCB,
   "view-split-vertical": F0BCC,
   "view-stream": F0575,
+  "view-stream-outline": F1490,
   "view-week": F0576,
+  "view-week-outline": F1491,
   "vimeo": F0577,
   "violin": F060F,
   "virtual-reality": F0894,
@@ -5122,6 +5220,8 @@ $mdi-icons: (
   "water-pump-off": F0F93,
   "water-well": F106B,
   "water-well-outline": F106C,
+  "watering-can": F1481,
+  "watering-can-outline": F1482,
   "watermark": F0612,
   "wave": F0F2E,
   "waveform": F147D,
