feat: se agregan algunos iconos de mdi al set

--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -227,4 +227,378 @@ $adi-icons: (
      "documento-cursor": e8ec,
      "salida": e8d6,
      "calendario-fecha-abajo": e819,
+     "account": e888,
+     "account-alert": e8b3,
+     "account-check": e8bc,
+     "account-convert": e8bd,
+     "account-key": e8cb,
+     "account-multiple": e8cc,
+     "account-multiple-outline": e8dd,
+     "account-multiple-plus": e8e9,
+     "account-off": e8eb,
+     "account-outline": e8ed,
+     "account-plus": e8ee,
+     "account-remove": e8ef,
+     "android": e8f0,
+     "apps": e8f1,
+     "arrow-down": e8f2,
+     "arrow-down-drop-circle": e8f3,
+     "arrow-down-drop-circle-outline": e8f4,
+     "arrow-left": e8f5,
+     "arrow-left-drop-circle": e8f6,
+     "arrow-left-drop-circle-outline": e8f7,
+     "arrow-up": e8f8,
+     "arrow-up-bold-circle": e8f9,
+     "arrow-up-bold-circle-outline": e8fa,
+     "arrow-up-drop-circle": e8fb,
+     "flask-empty-outline": e8fc,
+     "bell": e8fd,
+     "bell-ring": e8fe,
+     "bell-ring-outline": e8ff,
+     "bio": e900,
+     "blur": e901,
+     "book": e902,
+     "border-bottom": e903,
+     "border-color": e904,
+     "border-left": e905,
+     "border-right": e906,
+     "border-top": e907,
+     "car": e908,
+     "cart": e909,
+     "cat": e90a,
+     "cellphone": e90b,
+     "cellphone-android": e90c,
+     "chart-pie": e90d,
+     "check": e90e,
+     "checkbox-blank": e90f,
+     "checkbox-blank-circle": e910,
+     "checkbox-blank-circle-1": e911,
+     "checkbox-blank-circle-outline": e912,
+     "checkbox-blank-circle-outline-1": e913,
+     "chevron-up": e914,
+     "city": e915,
+     "clipboard": e916,
+     "clipboard-account": e917,
+     "clipboard-arrow-left": e918,
+     "clipboard-check": e919,
+     "close": e91a,
+     "close-box": e91b,
+     "close-circle": e91c,
+     "close-circle-outline": e91d,
+     "comment": e91e,
+     "comment-outline": e91f,
+     "dice-2": e920,
+     "dice-3": e921,
+     "dice-4": e922,
+     "dice-5": e923,
+     "dice-6": e924,
+     "dots-vertical": e925,
+     "download": e926,
+     "drag": e927,
+     "drone": e928,
+     "eject": e929,
+     "email": e92a,
+     "email-outline": e92b,
+     "file-pdf": e92c,
+     "filter": e92d,
+     "fire": e92e,
+     "firefox": e92f,
+     "flag": e930,
+     "folder": e931,
+     "folder-account": e932,
+     "folder-remove": e933,
+     "forward": e934,
+     "function": e935,
+     "gate": e936,
+     "git": e937,
+     "help-circle": e938,
+     "history": e939,
+     "home": e93a,
+     "bed": e93b,
+     "pot": e93c,
+     "human": e93d,
+     "human-child": e93e,
+     "image": e93f,
+     "import": e940,
+     "information": e941,
+     "information-outline": e942,
+     "key": e943,
+     "logout": e944,
+     "magnify": e945,
+     "map": e946,
+     "map-marker": e947,
+     "margin": e948,
+     "menu": e949,
+     "menu-down": e94a,
+     "menu-left": e94b,
+     "menu-right": e94c,
+     "menu-up": e94d,
+     "message": e94e,
+     "message-alert": e94f,
+     "numeric-2-box-multiple-outline": e950,
+     "open-in-app": e951,
+     "opera": e952,
+     "package": e953,
+     "panda": e954,
+     "pause": e955,
+     "pen": e956,
+     "pencil": e957,
+     "percent": e958,
+     "phone": e959,
+     "pi": e95a,
+     "pill": e95b,
+     "radio": e95c,
+     "radio-tower": e95d,
+     "read": e95e,
+     "refresh": e95f,
+     "regex": e960,
+     "reload": e961,
+     "repeat": e962,
+     "responsive": e963,
+     "ribbon": e964,
+     "routes": e965,
+     "scale": e966,
+     "sd": e967,
+     "star": e968,
+     "star-outline": e969,
+     "stop": e96a,
+     "store": e96b,
+     "switch": e96c,
+     "sword": e96d,
+     "sync": e96e,
+     "sync-alert": e96f,
+     "tab": e970,
+     "table": e971,
+     "table-large": e972,
+     "tag": e973,
+     "upload": e974,
+     "vector-difference": e975,
+     "vector-difference-ab": e976,
+     "vector-difference-ba": e977,
+     "walk": e978,
+     "wan": e979,
+     "watch": e97a,
+     "web-1": e97b,
+     "weight": e97c,
+     "wrap": e97d,
+     "xml": e97e,
+     "youtube": e97f,
+     "dice-d8-outline": e980,
+     "dice-d6-outline": e981,
+     "disc": e982,
+     "application": e983,
+     "buffer": e984,
+     "dialpad": e985,
+     "matrix": e986,
+     "account-details": e987,
+     "box-shadow": e988,
+     "cards": e989,
+     "face": e98a,
+     "file-tree": e98b,
+     "gradient": e98c,
+     "message-bulleted": e98d,
+     "publish": e98e,
+     "scanner": e98f,
+     "update": e990,
+     "angular": e991,
+     "plex": e992,
+     "angularjs": e993,
+     "arrow-down-box": e994,
+     "arrow-up-box": e995,
+     "asterisk": e996,
+     "bootstrap": e997,
+     "format-list-checks": e998,
+     "atom": e999,
+     "loading": e99a,
+     "sign-direction": e99b,
+     "null": e99c,
+     "pipe": e99d,
+     "ring": e99e,
+     "sass": e99f,
+     "shape": e9a0,
+     "check-outline": e9a1,
+     "pier": e9a2,
+     "bed-empty": e9a3,
+     "clock": e9a4,
+     "home-plus": e9a5,
+     "restore": e9a6,
+     "text": e9a7,
+     "table-border": e9a8,
+     "contain": e9a9,
+     "doctor": e9aa,
+     "hand": e9ab,
+     "ip": e9ac,
+     "safe": e9ad,
+     "trash-can": e9ae,
+     "et": e9af,
+     "emoticon": e9b0,
+     "emoticon-happy": e9b1,
+     "emoticon-sad": e9b2,
+     "radius": e9b3,
+     "spa": e9b4,
+     "bullet": e9b5,
+     "gif": e9b6,
+     "tea": e9b7,
+     "mine": e9b8,
+     "nail": e9b9,
+     "send-circle": e9ba,
+     "grill": e9bb,
+     "middleware": e9bc,
+     "bee": e9bd,
+     "hospital-1": e9be,
+     "post": e9bf,
+     "graph": e9c0,
+     "form-textarea": e9c1,
+     "api": e9c2,
+     "diabetes": e9c3,
+     "router": e9c4,
+     "desk": e9c5,
+     "oci": e9c6,
+     "ski": e9c7,
+     "account-search": e9c8,
+     "account-switch": e9c9,
+     "adjust": e9ca,
+     "alert": e9cb,
+     "alert-circle": e9cc,
+     "alert-outline": e9cd,
+     "alpha": e9ce,
+     "anchor": e9cf,
+     "arrow-up-drop-circle-outline": e9d0,
+     "at": e9d1,
+     "baby": e9d2,
+     "backup-restore": e9d3,
+     "barcode": e9d4,
+     "barcode-scan": e9d5,
+     "flask": e9d6,
+     "flask-empty": e9d7,
+     "box": e9d8,
+     "bug": e9d9,
+     "bus": e9da,
+     "calendar": e9db,
+     "calendar-clock": e9dc,
+     "calendar-multiple": e9dd,
+     "calendar-plus": e9de,
+     "calendar-today": e9df,
+     "checkbox-blank-circle-outline-2": e9e0,
+     "checkbox-blank-outline": e9e1,
+     "checkbox-marked": e9e2,
+     "chevron-double-left": e9e3,
+     "chevron-double-right": e9e4,
+     "chevron-down": e9e5,
+     "chevron-left": e9e6,
+     "chevron-right": e9e7,
+     "compare": e9e8,
+     "content-copy": e9e9,
+     "content-paste": e9ea,
+     "content-save": e9eb,
+     "cup": e9ec,
+     "delete": e9ed,
+     "details": e9ee,
+     "dice-1": e9ef,
+     "export": e9f0,
+     "eye": e9f1,
+     "eye-off": e9f2,
+     "eyedropper": e9f3,
+     "eyedropper-variant": e9f4,
+     "file": e9f5,
+     "file-chart": e9f6,
+     "file-multiple": e9f7,
+     "github": e9f8,
+     "google": e9f9,
+     "google-chrome": e9fa,
+     "grid": e9fb,
+     "group": e9fc,
+     "heart": e9fd,
+     "heart-1": e9fe,
+     "help": e9ff,
+     "label": ea00,
+     "lan": ea01,
+     "layers": ea02,
+     "link": ea03,
+     "link-variant": ea04,
+     "link-variant-off": ea05,
+     "lock": ea06,
+     "login": ea07,
+     "message-processing": ea08,
+     "message-text": ea09,
+     "message-text-outline": ea0a,
+     "monitor": ea0b,
+     "more": ea0c,
+     "mouse": ea0d,
+     "needle": ea0e,
+     "numeric-1-box-outline": ea0f,
+     "pin": ea10,
+     "play": ea11,
+     "playlist-plus": ea12,
+     "plus": ea13,
+     "plus-circle": ea14,
+     "poll": ea15,
+     "printer": ea16,
+     "pulse": ea17,
+     "select": ea18,
+     "send": ea19,
+     "server": ea1a,
+     "cog": ea1b,
+     "share": ea1c,
+     "sim": ea1d,
+     "skip-forward": ea1e,
+     "sort": ea1f,
+     "target": ea20,
+     "tent": ea21,
+     "tie": ea22,
+     "timelapse": ea23,
+     "tooltip": ea24,
+     "tram": ea25,
+     "tree": ea26,
+     "undo": ea27,
+     "translate": ea28,
+     "opacity": ea29,
+     "card-account-details": ea2a,
+     "alert-circle-outline": ea2b,
+     "animation": ea2c,
+     "check-circle": ea2d,
+     "dice-d20-outline": ea2e,
+     "dice-d4-outline": ea2f,
+     "human-female": ea30,
+     "human-male": ea31,
+     "information-variant": ea32,
+     "marker": ea33,
+     "phone-plus": ea34,
+     "oar": ea35,
+     "solid": ea36,
+     "bomb": ea37,
+     "contacts": ea38,
+     "delete-empty": ea39,
+     "nut": ea3a,
+     "react": ea3b,
+     "run": ea3c,
+     "svg": ea3d,
+     "arrow-up-bold": ea3e,
+     "cancel": ea3f,
+     "clipboard-check-outline": ea40,
+     "tooth": ea41,
+     "arch": ea42,
+     "cogs": ea43,
+     "lock-alert": ea44,
+     "nas": ea45,
+     "table-search": ea46,
+     "transition": ea47,
+     "variable": ea48,
+     "ember": ea49,
+     "origin": ea4a,
+     "silo": ea4b,
+     "card": ea4c,
+     "card-text": ea4d,
+     "pan": ea4e,
+     "script": ea4f,
+     "ellipse": ea50,
+     "mail-1": ea51,
+     "rotate-3d": ea52,
+     "segment": ea53,
+     "unicode": ea54,
+     "latitude": ea55,
+     "longitude": ea56,
+     "merge": ea57,
+     "head": ea58,
+     "timer": ea59,
 );
