--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -105,7 +105,6 @@ $adi-icons: (
      "estudiante": e868,
      "etiqueta": e869,
      "oxigeno": e86a,
-     "familia": e86b,
      "farmacia": e86c,
      "femenino": e86d,
      "ferula": e86e,
@@ -601,4 +600,5 @@ $adi-icons: (
      "merge": ea57,
      "head": ea58,
      "timer": ea59,
+     "familia": ea5a,
 );
