--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -601,4 +601,6 @@ $adi-icons: (
      "head": ea58,
      "timer": ea59,
      "familia": ea5a,
+     "cloud-off-outline": e86b,
+     "cloud-check-outline": ea5b,
 );
